fix: add to body overflow: hidden

--- a/english-for-kids/src/sass/base/_base.scss
+++ b/english-for-kids/src/sass/base/_base.scss
@@ -42,3 +42,7 @@ a {
 .shown {
   display: block;
 }
+
+.overflow-hidden {
+  overflow: hidden;
+}
